--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<div id="container">
 		<div class="rectangle">
 			<div id="logo">
-				<a class="purelink" href="zatrudnij-programiste">
+				<a class="purelink" href="index.html">
 					<img class="profile-img" src="img/profile.jpg" />Patryk Stalke
 				</a>
 			</div>
@@ -26,14 +26,14 @@
 		</div>
 		<div class="square">
 			<div class="tile1">
-				<a class="tilelink" href="kim-jestem">
+				<a class="tilelink" href="about.html">
 					<i class="icon-user"></i>
 					<br />
 					O mnie
 				</a>
 			</div>
 			<div class="tile1-a">
-				<a class="tilelink" href="oferta-tworzenia-oprogramowania">
+				<a class="tilelink" href="offer.html">
 					<i class="icon-desktop"></i>
 					<br />
 					Oferta
@@ -41,14 +41,14 @@
 			</div>
 			<div style="clear:both;"></div>			
 			<div class="tile2">
-				<a class="tilelink" href="cv-programista-html-javascript">
+				<a class="tilelink" href="cv.html">
 					<i class="icon-file-code"></i>
 					<br />
 					Doświadczenie
 				</a>
 			</div>
 			<div class="tile3">
-				<a class="tilelink" href="kontakt-programista">
+				<a class="tilelink" href="contact">
 					<i class="icon-mail"></i>
 					<br />
 					Kontakt
