--- a/offer.html
+++ b/offer.html
@@ -16,8 +16,8 @@
 	<div id="container">
 		<div class="rectangle">
 			<div id="logo">
-				<a class="purelink" href="zatrudnij-programiste">
-					Patryk Stalke
+				<a class="purelink" href="index.html">
+					<img class="profile-img" src="img/profile.jpg" />Patryk Stalke
 				</a>
 			</div>
 			<div id="timer">
@@ -26,51 +26,52 @@
 		</div>
 		<div class="square">
 			<div class="tile1">
-				<a class="tilelink" href="kim-jestem">
+				<a class="tilelink" href="about.html">
 					<i class="icon-user"></i>
 					<br />
-					Kim jestem?
+					O mnie
 				</a>
 			</div>
-			<div class="tile1">
-				<a class="tilelink" href="oferta-tworzenia-oprogramowania">
+			<div class="tile1-a">
+				<a class="tilelink" href="offer.html">
 					<i class="icon-desktop"></i>
 					<br />
-					Co oferuję?
+					Oferta
 				</a>
 			</div>
 			<div style="clear:both;"></div>			
 			<div class="tile2">
-				<a class="tilelink" href="cv-programista-html-javascript">
-					<i class="icon-graduation-cap"></i>
+				<a class="tilelink" href="cv.html">
+					<i class="icon-file-code"></i>
 					<br />
-					Curriculum vitae
+					Doświadczenie
 				</a>
 			</div>
 			<div class="tile3">
-				<a class="tilelink" href="kontakt-programista">
+				<a class="tilelink" href="contact">
 					<i class="icon-mail"></i>
 					<br />
-					Kontakt ze mną
+					Kontakt
 				</a>
 			</div>
 			<div style="clear:both;"></div>
 			<div class="tile4">
-				<i>Talk is cheap. Show me the code!</i>
+				<i>Bycie najbogatszym człowiekiem na cmentarzu mnie nie interesuje. 
+				Kłaść się do łóżka w nocy z myślą, że stworzyliśmy coś wspaniałego... to się dla mnie liczy. </i>
 				<br />
-				- Linus Torvalds, twórca Linuxa
+				- <b>Steve Jobs</b>, twórca <b>Apple</b>
 			</div>
 		</div>
 		<div class="square">
 			<div class="tile5">
-				Co oferuję?
+				Strona Główna
 				<br />
 				<br />
-				W mojej ofercie znajduje się szeroki asortyment usług. Najbardziej doświadczony jestem w dziedzinie Web Developingu, dlatego też chętnie przyjmę każde zlecenie HTML5/CSS3/JavaScript. Od niedawna programuję również w .NET - głównie jest to C# (WPF, Universal Windows Apps).
+				Witam na stronie głównej mojej elektronicznej wizytówki! Można tu znaleźć wiele informacji na mój temat, chociażby moje kwalifikacje czy wykształcenie. Strona jest możliwie jak najbardziej prosta i przejrzysta, tak, by była jak najlepiej "user-friendly". Zapraszam do korzystania z moich usług!
 			</div>
-			<div class="yt">
-				<a class="sociallink" href="http://youtube.com" target="_blank">
-					<i class="icon-youtube"></i>
+			<div class="gh">
+				<a class="sociallink" href="http://github.com" target="_blank">
+					<i class="icon-github"></i>
 				</a>
 			</div>
 			<div class="fb">
@@ -78,9 +79,9 @@
 					<i class="icon-facebook"></i>
 				</a>
 			</div>
-			<div class="gp">
-				<a class="sociallink" href="http://plus.google.com" target="_blank">
-					<i class="icon-gplus"></i>
+			<div class="li">
+				<a class="sociallink" href="http://linkedin.com" target="_blank">
+					<i class="icon-linkedin"></i>
 				</a>
 			</div>
 			<div class="tt">
